--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="demobnk">
+  <meta name="apple-mobile-web-app-title" content="demo_manager">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>demobnk</title>
+  <title>demo_manager</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
